# shortest-path-across-mesh

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cgal_shortest_path.cpp  cgal_shortest_path.py  cmake_install.cmake  example.py
data/: blob.off  blob.stl  elephant.stl  sphere.off  sphere.stl  suzanne.off  suzanne.stl
